# pic18-q20-programmer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  deps.json  pic18-q20-programmer.code-workspace
.devcontainer/amd64-container/: Dockerfile  devcontainer.json
.devcontainer/armhf-container/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml
icsp/: CMakeLists.txt
icsp/include/: FimwareFile.hpp  ICSP_header.hpp  ICSP_pins.hpp  IDumper.hpp  IntelHex.hpp  PIC18-Q20.hpp  PICProgrammer.hpp  Region.hpp  Timings.hpp  fwd.hpp  utils.hpp
icsp/src/: ICSP_header.cpp  IntelHex.cpp  PICProgrammer.cpp  utils.cpp
igpio/: CMakeLists.txt
igpio/include/: IGPIO.hpp
libgpiod/: CMakeLists.txt  libGPIO.cpp  libGPIO.hpp  main.cpp
mockgpio/: CMakeLists.txt
mockgpio/include/: MockGPIO.hpp  MockPIC18Q20.hpp
mockgpio/src/: MockGPIO.cpp  MockPIC18Q20.cpp
pigpio/: CMakeLists.txt  PiGPIO.cpp  PiGPIO.hpp
resource/: MrHat.X.production-blink.hex  MrHat.X.production.hex  clean_mem.hex  dia_test.hex  full_mem.hex
src/: main.cpp  prog_utils.cpp  prog_utils.hpp
test/: test_ICSP.cpp  test_PICProgrammer.cpp  test_intelhex.cpp  test_mockimpl.cpp  test_utils.cpp  test_utils.hpp
test_integration/: conftest.py  test_reads.py
